--- a/templates/main/main_base.html
+++ b/templates/main/main_base.html
@@ -38,7 +38,7 @@
                         <div class="col">
                         {% if LANGUAGE_CODE == 'ar' %}
                             <nav class="navbar navbar-expand-lg nav-secondary nav-primary-hover nav-line-active">
-                                <a class="navbar-brand order-2 order-lg-2" href="{% url "main_app:index" %}">
+                                <a class="navbar-brand order-0 order-lg-" href="{% url "main_app:index" %}">
                                     <img class="nav-logo" src="{% static 'rtl/images/logo/logo1.png' %}" alt="Image not found !">
                                 </a>
                                 <button class="navbar-toggler order-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,11 +54,11 @@
                                     <span class="navbar-toggler-icon flaticon-menu flat-small text-primary"></span>
                                 </button>
                             {% if LANGUAGE_CODE == 'ar' %}
-                                <div class="collapse navbar-collapse order-3 order-lg-1" id="navbarSupportedContent">
-                                    <ul class="navbar-nav me-auto order-lg-3">
+                                <div class="collapse navbar-collapse order-1 order-lg-1" id="navbarSupportedContent">
+                                    <ul class="navbar-nav me-auto order-lg-0">
                             {% else %}
                                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                                    <ul class="navbar-nav ms-auto">
+                                    <ul class="navbar-nav me-auto">
                             {% endif %}
 
 
@@ -86,7 +86,7 @@
                                     </ul>
 
                                     {% if user.is_authenticated %}
-                                        <ul class="navbar-nav ms-auto sm-mx-none ps-3 user-option">
+                                        <ul class="navbar-nav {% if LANGUAGE_CODE == 'en' %}ms{% else %}me{% endif %}-auto sm-mx-none ps-3 user-option {% if LANGUAGE_CODE == 'ar' %}order-lg-2{% endif %}">
                                             <li class="nav-item dropdown">
                                                 <img src="{{ user.get_logo_image_or_avatar }}" alt="">
                                                 <a class="dropdown-toggle" href="#">
@@ -153,7 +153,7 @@
         {% endblock page_header %}
         <!--============== Property Grid View Start ==============-->
         <div class="full-row pt-0">
-            <div class="container">
+            <div class="container-fluid">
                 {% block main_content %}
 
                 {% endblock main_content %}
