remove dashboard templates

--- a/templates/main/delete.html
+++ b/templates/main/delete.html
@@ -1,4 +1,4 @@
-{% extends 'dashboards/dashboard_base.html' %}
+{% extends 'main/main_base.html' %}
 {% load static i18n %}
 {% load crispy_forms_tags %}
 {% block page_header %}
@@ -9,7 +9,7 @@
     </div>
 {% endblock page_header %}
 
-{% block main_containt %}
+{% block main_content %}
     <div class="row">
         <div class="col mb-30">
             <div class="border rounded bg-white p-30">
@@ -33,5 +33,5 @@
             </div>
         </div>
     </div>
-{% endblock main_containt %}
+{% endblock main_content %}
 
