--- a/templates/main/add_project.html
+++ b/templates/main/add_project.html
@@ -1,4 +1,4 @@
-{% extends 'dashboards/dashboard_base.html' %}
+{% extends 'main/main_base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
 {% block page_header %}
