--- a/templates/main/profile.html
+++ b/templates/main/profile.html
@@ -1,14 +1,14 @@
-{% extends 'dashboards/dashboard_base.html' %}
+{% extends 'main/main_base.html' %}
 {% load static %}
 {% load i18n %}
 {% load crispy_forms_tags %}
 {% block page_header %}
     <h3>{{ listing_title }}</h3>
 {% endblock page_header %}
-{% block main_containt %}
+{% block main_content %}
     <form class="form-boder" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
         <button type="submit">{% trans "Update" %}</button>
     </form>
-{% endblock main_containt %}
+{% endblock main_content %}
