--- a/templates/main/project_main_phases.html
+++ b/templates/main/project_main_phases.html
@@ -1,4 +1,4 @@
-{% extends 'dashboards/dashboard_base.html' %}
+{% extends 'main/main_base.html' %}
 {% load static i18n %}
 {% load crispy_forms_tags %}
 {% block page_header %}
@@ -9,7 +9,7 @@
     </div>
 {% endblock page_header %}
 
-{% block main_containt %}
+{% block main_content %}
     <div class="row">
         <div class="col">
             <div class="dashboard-panel border bg-white rounded overflow-hidden w-100">
@@ -26,26 +26,23 @@
                             <tr>
                                 <td>
                                     <h5 class="text-secondary font-400">{{ phase.title }}</h5>
-                                    {#                                    <span><i class="fas fa-map-marker-alt text-primary font-13"></i> {{ project.location }}</span>#}
-                            </div>
-                            </td>
-                            <td>
-                                <a href="{% url 'main:sub-phase' phase.project_id phase.pk %}"
-                                   class="text-primary me-4 mb-1"><i class="fas fa-edit"></i></a>
-                                {#                                <a href="{% url 'main:main-phase-delete' phase.project_id phase.pk %}" class="text-primary me-4 mb-1"><i class="fas fa-trash"></i></a>#}
-                            </td>
+                                </td>
+                                <td>
+                                    <a href="{% url 'main:sub-phase' phase.project_id phase.pk %}"
+                                       class="text-primary me-4 mb-1"><i class="fas fa-edit"></i></a>
+                                </td>
                             </tr>
                         {% endfor %}
-                </tbody>
-                </table>
-            </div>
-            <div class="dashboard-panel border bg-white rounded overflow-hidden w-100">
-                <div class="col">
-                    <a href="#" class="btn btn-outline-primary">{% trans "Add New Phase" %}</a>
+                        </tbody>
+                    </table>
                 </div>
+                <div class="dashboard-panel border bg-white rounded overflow-hidden w-100">
+                    <div class="col">
+                        <a href="#" class="btn btn-outline-primary">{% trans "Add New Phase" %}</a>
+                    </div>
+                </div>
+                {% include 'pagination.html' %}
             </div>
-            {% include 'pagination.html' %}
         </div>
     </div>
-    </div>
-{% endblock main_containt %}
+{% endblock main_content %}
