Translate Strings  In Main and Base HTML files and Fix Logo In Footer

--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -62,7 +62,7 @@
                                     <div class="box-70px position-relative">
                                         <i class="flaticon-shop flat-medium d-inline-block text-primary position-absolute xy-center"></i>
                                     </div>
-                                    <h6 class="d-block text-secondary">{% trans "Industrial" %}Industrial</h6>
+                                    <h6 class="d-block text-secondary">{% trans "Commercial" %}</h6>
                                 </a>
                             </div>
 
@@ -80,17 +80,11 @@
                 <div class="col" id="about">
                     <!--                        <div class="bg-white rounded border p-30">-->
                     <h2 style="text-align:center">{% trans "About This System " %}</h2>
-                    <p style="text-align:center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis mollis et
-                        sem sed sollicitudin. Donec non odio neque. Aliquam hendrerit sollicitudin purus, quis rutrum mi
-                        accumsan nec. Quisque bibendum orci ac nibh facilisis,
-                        at malesuada orci congue. Nullam tempus sollicitudin cursus. Ut et adipiscing erat. Curabitur
-                        this is a text link libero tempus congue.
-                        Posuere ante tincidunt sed porta senectus fusce interdum. Dictum class semper Ornare venenatis
-                        habitant sodales. Venenatis volutpat torquent. Curae; suspendisse ligula suscipit magna.
-                        Interdum dapibus in nulla mollis velit
-                        taciti mollis gravida torquent lacus lobortis volutpat elementum leo pharetra. Hac congue
-                        consequat ante laoreet consectetuer. Cum. Nulla nisl purus a. Et felis platea ligula cubilia
-                        massa ultrices leo iaculis porttitor.
+                    <p style="text-align:center">
+                        {% trans 'The Real Estate System develops and invests in the high-quality real estate, projects and companies that make up the urban fabric of dynamic cities around the world. It does so responsibly, with the goal of creating long-term performance. commit By creating living spaces that enhance the well-being of people and communities, while reducing their environmental footprint.' %}
+
+
+                        {#                        {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %} {% trans 'Lorem ipsum dolor' %}#}
                     </p>
                 </div>
             </div>
@@ -103,7 +97,7 @@
             <div class="row">
                 <div class="col-lg-12 mb-5">
                     <h3 class="mb-4 text-center w-50 w-sm-100 mx-auto">{% trans "Mission & Vision" %}</h3>
-                    <span class="text-secondary w-75 d-table text-center w-sm-100 mx-auto pb-4">Molestie accumsan ipsum condimentum curabitur euismod tempor aptent nullam aliquet phasellus. Lobortis felis tortor curae mi semper porta pellentesque.</span>
+                    <span class="text-secondary w-75 d-table text-center w-sm-100 mx-auto pb-4">{% trans "We redefined the traditional model by building specialized departments ready to give clients unparalleled expertise and a positive experience." %}</span>
                 </div>
             </div>
             <div class="row row-cols-lg-3 row-cols-md-2 row-cols-1">
@@ -111,48 +105,45 @@
                     <div class="thumb-modern-border p-4 h-100">
                         <i class="flaticon-capital flat-medium text-primary bg-gray d-table"></i>
                         <h5 class="my-3"><a href="#">{% trans "Mission" %} 1</a></h5>
-                        <p>Mollis lorem posuere porta class sociis rhoncus primis ornare. Suscipit risus volutpat varius
-                            eget. Elementum mauris tempor at class nullam.</p>
+                        <p>{% trans "We are dedicated to providing world-class service and market-leading expertise to our clients. We are passionate about providing the extra value that others simply will not. Fanatical integrity and consistently impressive results will be the signature of our service. We will succeed because we will not let our clients fail." %}</p>
                     </div>
                 </div>
                 <div class="col mb-5">
                     <div class="thumb-modern-border p-4 h-100">
                         <i class="flaticon-cost flat-medium text-primary bg-gray d-table"></i>
                         <h5 class="my-3"><a href="#">{% trans "Mission" %} 2</a></h5>
-                        <p>Mollis lorem posuere porta class sociis rhoncus primis ornare. Suscipit risus volutpat varius
-                            eget. Elementum mauris tempor at class nullam.</p>
+                        <p>{% trans "Delivering the dream of home ownership everywhere.because owning real estate provides security, safety and opportunity for individuals. The technology we build helps real estate agents become more efficient at their job and find more customers to deliver on that mission." %}</p>
+
                     </div>
                 </div>
                 <div class="col mb-5">
                     <div class="thumb-modern-border p-4 h-100">
                         <i class="flaticon-insurance flat-medium text-primary bg-gray d-table"></i>
                         <h5 class="my-3"><a href="#">{% trans "Mission" %} 3</a></h5>
-                        <p>Mollis lorem posuere porta class sociis rhoncus primis ornare. Suscipit risus volutpat varius
-                            eget. Elementum mauris tempor at class nullam.</p>
+                        <p>{% trans "Our agents sell homes. They build relationships. They problem-solve.  They discover neighbourhoods. values and the newest, hottest listings. They make sure our clients don’t buy the wrong home." %}</p>
+
                     </div>
                 </div>
                 <div class="col mb-5">
                     <div class="thumb-modern-border p-4 h-100">
                         <i class="flaticon-money-1 flat-medium text-primary bg-gray d-table"></i>
                         <h5 class="my-3"><a href="#">{% trans "Vision" %} 1</a></h5>
-                        <p>Mollis lorem posuere porta class sociis rhoncus primis ornare. Suscipit risus volutpat varius
-                            eget. Elementum mauris tempor at class nullam.</p>
+                        <p>{% trans "We redefined the traditional model by building specialized departments ready to give clients unparalleled expertise and a positive experience." %}</p>
                     </div>
                 </div>
                 <div class="col mb-5">
                     <div class="thumb-modern-border p-4 h-100">
                         <i class="flaticon-cargo flat-medium text-primary bg-gray d-table"></i>
                         <h5 class="my-3"><a href="#">{% trans "Vision" %} 2</a></h5>
-                        <p>Mollis lorem posuere porta class sociis rhoncus primis ornare. Suscipit risus volutpat varius
-                            eget. Elementum mauris tempor at class nullam.</p>
+                        <p>{% trans "We want to win at what we do, and we do all we can to help our customers, agents and employees build wealth. We love to work with people who are passionate about working hard and also giving back to their communities in a big way." %}</p>
+
                     </div>
                 </div>
                 <div class="col mb-5">
                     <div class="thumb-modern-border p-4 h-100">
                         <i class="flaticon-group flat-medium text-primary bg-gray d-table"></i>
                         <h5 class="my-3"><a href="#">{% trans "Vision" %} 3</a></h5>
-                        <p>Mollis lorem posuere porta class sociis rhoncus primis ornare. Suscipit risus volutpat varius
-                            eget. Elementum mauris tempor at class nullam.</p>
+                        <p>{% trans "We will be #1 in each of five categories: residential real estate, development/investments, mortgage, title, and insurance." %}</p>
                     </div>
                 </div>
             </div>
@@ -230,9 +221,7 @@
                     <div class="col-lg-8 mx-auto text-center position-relative">
                         <h2 class="text-white text-uppercase mb-4 font-400">{% trans "WHY SHOULD YOU JOIN US ?" %}</h2>
                         <div class="text-white">
-                            <p>Accumsan justo nunc maecenas nostra pulvinar augue nunc rhoncus consequat a felis Mollis
-                                sollicitudin proin turpis sociis in erat eros lectus class potenti lobortis enim
-                                scelerisque.</p>
+                            <p>{% trans "We will be #1 in each of five categories: residential real estate, development/investments, mortgage, title, and insurance." %}</p>
                         </div>
                         <a href="#" class="btn btn-primary mt-3">{% trans "Register" %}</a>
                     </div>
@@ -310,12 +299,11 @@
             <div class="row">
                 <div class="col-md-5 order-md-2">
                     <h4 class="down-line mb-4">{% trans "Get In Touch" %}</h4>
-                    <p>Nullam vel enim risus. Integer rhoncus hendrerit sem egestas porttitor.</p>
+                    <p>{% trans "Contact us for the latest news about real estate" %}</p>
                     <div class="mb-3">
                         <ul>
                             <li class="mb-3">
-                                <h6 class="mb-0">{% trans "Office Address" %} :</h6> Level 13, 2 Elizabeth St,
-                                Melbourne, Victoria 3000 Australia
+                                <h6 class="mb-0">{% trans "Office Address" %} :</h6> {% trans "Saudi Arabia, Eastern Province, King Street" %}
                             </li>
                             <li class="mb-3">
                                 <h6>{% trans "Contact Number" %} :</h6> (1) 000 991 8830, (800) 8001-8588
@@ -326,7 +314,7 @@
                         </ul>
                     </div>
                     <h5 class="mb-2">{% trans "Career Info" %}</h5>
-                    <p>If you’re interested in employment opportunities at Unicoder, please email us:<br> <a href="#">support@unicoderbd.com</a>
+                    <p>{% trans "For details of projects and developers,please email us:" %}<br> <a href="#">support@unicoderbd.com</a>
                     </p>
                 </div>
                 <div class="col-md-7 order-md-1">
