--- a/templates/main/main_base.html
+++ b/templates/main/main_base.html
@@ -170,8 +170,7 @@
             <div class="col">
                 <div class="footer-widget mb-4">
                     <div class="footer-logo mb-4">
-                        <a href="#"><img src="{% static 'images/logo.jpg' %}"
-                                         alt="{% trans 'Image not found!' %}"/></a>
+                        <img style="width: 70%; margin: 0 auto" src="{% static 'rtl/images/logo/logo-full-white.png' %}" alt="Image not found !">
                     </div>
                     <p></p>
                 </div>
@@ -187,7 +186,7 @@
                 <div class="footer-widget contact-widget mb-4">
                     <h3 class="widget-title mb-4">{% trans "Contact Info" %}</h3>
                     <ul>
-                        <li>Unicoder Design Agency 301 The Greenhouse, Custard Factory, London, E3 8DY.</li>
+                        <li>{% trans "Contact us for the latest news about real estate" %}</li>
                         <li>+1 246-345-0695</li>
                         <li>helpline@homex.com</li>
                     </ul>
@@ -208,8 +207,7 @@
             <div class="col">
                 <div class="footer-widget newslatter-widget mb-4">
                     <h4 class="widget-title mb-4">{% trans "Appointment" %}</h4>
-                    <p>Litora ligula dapibus scelerisque vitae, fermentum aenean gravida lobortis mus pulvinar
-                        magna turient primis.</p>
+                    <p>{% trans "We will be #1 in each of five categories: residential real estate, development/investments, mortgage, title, and insurance." %}</p>
                     <a href="#" class="btn btn-primary w-100">{% trans "Register Now" %}</a>
                 </div>
             </div>
