--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -7,20 +7,23 @@
                     <li class="page-item">
                         {% if page_obj.has_previous %}
                             <a href="?page={{ page_obj.previous_page_number }}"
-                               class="page-link">{% trans "Previous Page" %}</a>
+                               class="page-link">
+                                {% trans "Previous Page" %}
+                            </a>
                         {% endif %}
                     </li>
                     <li class="page-item active">
                         <a class="page-link" href="#">{{ page_obj.number }}</a>
                     </li>
-                    <span>of</span>
-                    <li class="page-item">
-                        <a class="page-link" href="#">{{ page_obj.paginator.num_pages }}</a>
-                    </li>
+{#                    <span>of</span>#}
+{#                    <li class="page-item">#}
+{#                        <a class="page-link" href="#">{{ page_obj.paginator.num_pages }}</a>#}
+{#                    </li>#}
                     <li class="page-item">
                         {% if page_obj.has_next %}
-                            <a class="page-link"
-                               href="?page={{ page_obj.next_page_number }}">{% trans "Next Page" %}</a>
+                            <a class="page-link" href="?page={{ page_obj.next_page_number }}">
+                                {% trans "Next Page" %}
+                            </a>
                         {% endif %}
                     </li>
                 </ul>
