--- a/templates/main/main_base.html
+++ b/templates/main/main_base.html
@@ -155,7 +155,7 @@
 {% endblock page_header %}
 <!--============== Property Grid View Start ==============-->
 <div class="full-row pt-0">
-    <div class="container-fluid">
+    <div class="container">
         {% block main_content %}
 
         {% endblock main_content %}
