--- a/templates/main/add_project.html
+++ b/templates/main/add_project.html
@@ -1,30 +1,31 @@
 {% extends 'main/main_base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load i18n %}
 {% block page_header %}
 <div class="row">
     <div class="col">
-        <h3 class="my-3">Add New Project</h3>
+        <h3 class="my-3">{% trans "Add New Project" %}</h3>
     </div>
 </div>
 {% endblock page_header %}
 
-{% block main_containt %}
+{% block main_content %}
 <div class="row">
     <div class="col mb-30">
         <div class="border rounded bg-white p-30">
-            <h4 class="mb-4">Basic Information</h4>
+            <h4 class="mb-4">{% trans "Basic Information" %}</h4>
             <form class="form-boder" method="POST">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class="row">
                     <div class="col-md-12 mb-20">
-                        <button type="submit" class="btn btn-primary" name="submitbasic">Save</button>
+                        <button type="submit" class="btn btn-primary" name="submitbasic">{% trans "Save" %}</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
 </div>
-{% endblock main_containt %}
+{% endblock main_content %}
 
