add some translation

--- a/templates/main/main_base.html
+++ b/templates/main/main_base.html
@@ -200,7 +200,7 @@
                         <li><a href="#">{% trans "Investment Solution" %}</a></li>
                         <li><a href="#">{% trans "requenly Ask Question" %}</a></li>
                         <li><a href="#">{% trans "ow It Work" %}</a></li>
-                        <li><a href="#">{% trans "ecome a Member" %}</a></li>
+                        <li><a href="#">{% trans "become a Member" %}</a></li>
                     </ul>
                 </div>
             </div>
