--- a/templates/main/project_detail.html
+++ b/templates/main/project_detail.html
@@ -106,12 +106,12 @@
                     {% if user.is_authenticated %}
                         <div class="widget widget_contact bg-white border p-30 shadow-one rounded mb-30">
                             <h5 class="mb-4">{% trans "Invit a Friend" %}</h5>
-                            <p>Just copy the link and send it to you friend</p>
+                            <p>{% trans "Just copy the link and send it to you friend" %}</p>
                             <p>{% fullurl 'main_app:ref-subscribe' project.pk user.pk %}</p>
                         </div>
                     {% endif %}
                 </div>
-                <div class="col-xl-8 order-xl-1">
+                <div class="col-xl-8 order-xl-1"{% if LANGUAGE_CODE == 'ar' %} dir="rtl"{% endif %}>
                     <div class="property-overview border summary rounded bg-white p-30 mb-30">
                         <div class="row row-cols-1">
                             <div class="col">
@@ -120,7 +120,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="property-overview border rounded bg-white p-30 mb-30">
+                    <div class="property-overview border rounded bg-white p-30 mb-30"{% if LANGUAGE_CODE == 'ar' %} dir="rtl"{% endif %}>
                         <div class="row row-cols-1">
                             <div class="col">
                                 <h5 class="mb-3">{% trans "Project Summary" %}</h5>
@@ -186,7 +186,7 @@
                     {#                        </div>#}
                     {#                    </div>#}
 
-                    <div class="property-overview border rounded bg-white p-30 mb-30">
+                    <div class="property-overview border rounded bg-white p-30 mb-30"{% if LANGUAGE_CODE == 'ar' %} dir="rtl"{% endif %}>
                         <div class="row row-cols-1">
                             <div class="col">
                                 <h5 class="mb-3">{% trans "Project Phases" %}</h5>
