complete translations for templates

--- a/templates/main/project_detail.html
+++ b/templates/main/project_detail.html
@@ -120,7 +120,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="property-overview border rounded bg-white p-30 mb-30"{% if LANGUAGE_CODE == 'ar' %} dir="rtl"{% endif %}>
+                    <div class="property-overview border rounded bg-white p-30 mb-30"{% if LANGUAGE_CODE == 'ar' %}
+                         dir="rtl"{% endif %}>
                         <div class="row row-cols-1">
                             <div class="col">
                                 <h5 class="mb-3">{% trans "Project Summary" %}</h5>
@@ -163,30 +164,8 @@
                             </div>
                         </div>
                     </div>
-
-
-                    {#                    <div class="property-overview border rounded bg-white overflow-hidden mb-30">#}
-                    {#                        <div class="row row-cols-1">#}
-                    {#                            <div class="col">#}
-                    {#                                <div class="mt-md-30 position-relative overlay-secondary">#}
-                    {#                                    <img src="assets/images/background/s1.png" alt="uniland">#}
-                    {#                                    <a data-fancybox="" class="video-popup"#}
-                    {#                                       href="https://www.youtube.com/watch?v=-xW83WO0uM8" title="video popup">#}
-                    {#                                        <span class="flaticon-play-button bg-primary text-white xy-center"></span>#}
-                    {#                                    </a>#}
-                    {#                                    <div class="loader position-absolute xy-center">#}
-                    {#                                        <div class="loader-inner ball-scale-multiple">#}
-                    {#                                            <div style="background: var(--theme-primary-color);"></div>#}
-                    {#                                            <div style="background: var(--theme-primary-color);"></div>#}
-                    {#                                        </div><span class="tooltip">#}
-                    {#                                                <b>ball-scale-multiple</b></span>#}
-                    {#                                    </div>#}
-                    {#                                </div>#}
-                    {#                            </div>#}
-                    {#                        </div>#}
-                    {#                    </div>#}
-
-                    <div class="property-overview border rounded bg-white p-30 mb-30"{% if LANGUAGE_CODE == 'ar' %} dir="rtl"{% endif %}>
+                    <div class="property-overview border rounded bg-white p-30 mb-30"{% if LANGUAGE_CODE == 'ar' %}
+                         dir="rtl"{% endif %}>
                         <div class="row row-cols-1">
                             <div class="col">
                                 <h5 class="mb-3">{% trans "Project Phases" %}</h5>
