--- a/templates/main/subscribe.html
+++ b/templates/main/subscribe.html
@@ -16,10 +16,12 @@
                                     <div class="row row-cols-1 g-3">
                                         <div class="col">
                                             <div class="col">
-                                                <button type="submit"
-                                                        class="btn btn-primary mb-3">{% trans "Subscribe" %}</button>
+                                                <button type="submit" class="btn btn-primary mb-3">
+                                                    {% trans "Subscribe" %}
+                                                </button>
                                             </div>
                                         </div>
+                                    </div>
                                 </form>
                             {% else %}
                                 <div class="row">
@@ -30,7 +32,6 @@
                                     </div>
                                 </div>
                             {% endif %}
-
                         </div>
                     </div>
                 </div>
